--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <li>
             Employee Of the Month - Harman (October 2106)
         </li>
-        <li><a href="./01.jpg">
+        <li><a href="./Koteswara rao.M publication certificate.pdf">
             Paper Published to IJCEE</a>
         </li>
     </ul>
